# drf-auth

./: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
auth_app/: models.py  permissions.py  serializers.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py
post_permissions/: asgi.py  settings.py  urls.py  wsgi.py
