[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["m7madmomani2 <mohammad.momani1996.kk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^5.0.0"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
