[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["m7madmomani2 <mohammad.momani1996.kk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^5.0.0"
Django = "^3.2.4"
django-cors-headers = "^3.7.0"
djangorestframework-simplejwt = "^4.7.1"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
PyJWT = "^2.1.0"
pytz = "^2021.1"
sqlparse = "^0.4.1"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
